--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
 		<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
  	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
    <script type="text/javascript" charset="utf-8">
+		 $(document).ready(function() {
  	  namespace = '/test';
      var socket = io.connect('http://' + document.domain + ':' + location.port + namespace);
 
@@ -25,6 +26,7 @@
  		  socket.emit('my_broadcast_event', {data: $('#broadcast_data').val()});
  		  return false;
  		});
+	});
  </script>
 
 
@@ -32,7 +34,7 @@
 	<body>
 	<div>What?</div>
 <div>
-	<form id="broadcast" method="POST" action="#">
+	<form id="broadcast" method="POST" action='#'>
 		<input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
 		<input type="submit" value="Broadcast">
 </form>
