--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,17 @@
 
 	<script type="text/javascript" src="//code.jquery.com/jquery-1.4.2.min.js"></script>
  	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
+	<script type="text/javascript" src="https://d3js.org/d3.v5.min.js"></script>
+
+	<script type="text/javascript">
+  $(document).ready(function() {
+ 	 console.log("trying to get to D3");
+ 	 var svg = d3.select("#racetrack")
+ 		 .append("svg:svg").attr("width", 100).attr("height", 50)
+ 		 .append("circle").attr("cx", 25).attr("cy", 25).attr("r", 25).style("fill", "purple");
+  });
+  </script>
+
   <script type="text/javascript" charset="utf-8">
 		 $(document).ready(function() {
  	  namespace = '/test';
@@ -37,11 +48,12 @@
 			console.log("pony update");
 			console.log(msg);
 			$('#ponies').html(msg.data);
+
+			d3.selectAll("circle").attr("cx", msg.data);
 		});
 
 	});
  </script>
-
 
 	</head>
 	<body>
@@ -54,11 +66,14 @@
 
 	<form id="runnumbers" method="POST" action='#'>
 		<input type="text" name="broadcast_data" id="broadcast_data" placeholder="Message">
-		<input type="submit" value="Broadcast">
+		<input type="submit" value="BANG!">
 	</form>
-
 </div>
-<div id="log"></div>
-	</body>
+
 	<div id="ponies"></div>
+	<div id="racetrack"> </div>
+  <div id="log"></div>
+	</body>
+
+</body>
 </html>
